# searchlight

./: .gitignore  Benchmarking.md  Cargo.toml  README.md  Searchlight.toml  Stoneblock.toml  requirements.txt
.github/workflows/: rust-linux.yml  rust-macos.yml  rust-windows.yml  rust.yml
benches/: io_bench.rs  search_bench.rs
examples/: README.md  direct_bench.rs  filebuf_bench.rs  io_uring_bench.rs  mmap_bench.rs  pfac_gpu_bench.rs
libsearchlight/: Cargo.toml
libsearchlight/benches/: io_bench.rs  memcpy_bench.rs  search_bench.rs
libsearchlight/examples/: README.md  direct_bench.rs  filebuf_bench.rs  generate_io_bench_dat.rs  generate_test_image.rs  io_uring_bench.rs  mmap_bench.rs  pfac_gpu_bench.rs
libsearchlight/shaders/: pfac.comp
libsearchlight/src/: classifiers.rs  classify.rs  error.rs  io.rs  lib.rs  search.rs  searchlight.rs  utils.rs  validation.rs
libsearchlight/src/classifiers/: jpeg_data.rs
libsearchlight/src/io/: direct.rs  filebuf.rs  io_uring.rs  mmap.rs
libsearchlight/src/lib/: io.rs
libsearchlight/src/lib/io/: direct.rs  io_uring.rs
libsearchlight/src/lib/search/: ac_cpu.rs  pairing.rs  search_common.rs
libsearchlight/src/lib/searchlight/: config.rs
libsearchlight/src/lib/utils/: iter.rs
libsearchlight/src/search/: ac_cpu.rs  pairing.rs  pfac_gpu.rs  search_common.rs
libsearchlight/src/searchlight/: carve_log.rs  config.rs
libsearchlight/src/utils/: fragments_index.rs  multi_reader.rs  str_parse.rs  subrange.rs
libsearchlight/src/validation/: jpeg.rs  jpg.rs  png.rs  png2.rs  zip.rs
searchlight/: Cargo.toml
searchlight/src/: args.rs  main.rs
shaders/: pfac.comp  pfac_core.comp
src/: lib.rs  main.rs
src/lib/: error.rs  io.rs  search.rs  searchlight.rs  utils.rs
src/lib/io/: direct.rs  filebuf.rs  io_uring.rs  mmap.rs
src/lib/search/: pairing.rs  pfac_common.rs  pfac_cpu.rs  pfac_gpu.rs  search_common.rs
src/lib/searchlight/: config.rs
src/lib/utils/: chunk_iter.rs  iter.rs  logging.rs  memcpy_fast.rs
test_data/corpus/: sha256sum.txt
test_data/supplementary_files/: 7.zip.hexpat  README.md
