[package]
name = "searchlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
libc = "0.2.149" # TODO: Conditionally include libc as a dependency only on unix platforms

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "io_bench"
harness = false