[package]
name = "searchlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
rio = "0.9.4"

# Conditionally depend on libc on linux platforms
[target.'cfg(unix)'.dependencies]
libc = "0.2.150"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "io_bench"
harness = false