[package]
name = "searchlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
scoped-thread-pool = "1.0.4"
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"

# Conditionally depend on libc on linux platforms
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.150"
rio = "0.9.4"

[dev-dependencies]
criterion = "0.5.1"

[profile.dev]
opt-level = 1

[[bench]]
# TODO: Unify benchmarking harness
name = "search_bench"
harness = false