[package]
name = "libsearchlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "gpu" ]
gpu = [ "dep:vulkano", "dep:vulkano-shaders" ]
big_tests = [ "gpu" ]

[dependencies]
memmap = "0.7.0"
vulkano = { version = "0.34.0", optional = true }
vulkano-shaders = { version = "0.34.0", optional = true }
colored = "2.1.0"
serde = { version = "1.0.195", features = [ "derive" ] }

# Conditionally depend on libc on linux platforms
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.150"
rio = "0.9.4"

[dev-dependencies]
criterion = "0.5.1"
tinyrand = "0.5.0"

[[bench]]
name = "io_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "memcpy_bench"
harness = false
