[package]
name = "libsearchlight"
version = "0.1.0"
edition = "2021"
authors = [ "Will B. <williamjb555@gmail.com>" ]
description = "A WIP high performance, precise file carving library"

[features]
default = [ "gpu" ]
gpu = [ "dep:vulkano", "dep:vulkano-shaders" ]
big_tests = [ "gpu" ]

[dependencies]
memmap = "0.7.0"
vulkano = { version = "0.34.0", optional = true }
vulkano-shaders = { version = "0.34.0", optional = true }
serde = { version = "1.0.195", features = [ "derive" ] }
log = "0.4.20"
crc32fast = "1.3.2"
unicode-segmentation = "1.11.0"
strum = { version = "0.26.1", features = [ "derive" ] }

# Conditionally depend on libc and rio on linux platforms
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.150"
rio = "0.9.4"

[dev-dependencies]
criterion = "0.5.1"
tinyrand = "0.5.0"
env_logger = "0.11.1"

[[bench]]
name = "io_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

